// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`isAliasResult should return false for non-alias packages 1`] = `
{
  "_parsePackageNameCore": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
  "actual": false,
  "getSemverFromNpaResult": "4.17.21",
  "inputSpec": "lodash@4.17.21",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
}
`;

exports[`isAliasResult should return true for alias packages 1`] = `
{
  "_parsePackageNameCore": {
    "name": "my-lodash",
    "result": {
      "escapedName": "my-lodash",
      "fetchSpec": null,
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "my-lodash",
      "raw": "my-lodash@npm:lodash@4.17.21",
      "rawSpec": "npm:lodash@4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "subSpec": {
        "escapedName": "lodash",
        "fetchSpec": "4.17.21",
        "gitCommittish": undefined,
        "gitRange": undefined,
        "gitSubdir": undefined,
        "name": "lodash",
        "raw": "lodash@4.17.21",
        "rawSpec": "4.17.21",
        "registry": true,
        "saveSpec": null,
        "scope": undefined,
        "type": "version",
        "where": undefined,
      },
      "type": "alias",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "my-lodash",
    "type": "alias",
  },
  "actual": true,
  "getSemverFromNpaResult": "4.17.21",
  "inputSpec": "my-lodash@npm:lodash@4.17.21",
  "result": {
    "escapedName": "my-lodash",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "my-lodash",
    "raw": "my-lodash@npm:lodash@4.17.21",
    "rawSpec": "npm:lodash@4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
}
`;

exports[`isFileResult should return false for registry packages 1`] = `
{
  "_parsePackageNameCore": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
  "actual": false,
  "getSemverFromNpaResult": "4.17.21",
  "inputSpec": "lodash@4.17.21",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
}
`;

exports[`isFileResult should return true for directory packages 1`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": true,
  "getSemverFromNpaResult": "../other-pkg",
  "inputSpec": "../other-pkg",
  "result": {
    "escapedName": undefined,
    "fetchSpec": Any<String>,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": undefined,
    "raw": "../other-pkg",
    "rawSpec": "../other-pkg",
    "registry": undefined,
    "saveSpec": Any<String>,
    "scope": undefined,
    "type": "directory",
    "where": Any<String>,
  },
}
`;

exports[`isFileResult should return true for file packages 1`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": true,
  "getSemverFromNpaResult": "./packages/my-pkg",
  "inputSpec": "./packages/my-pkg",
  "result": {
    "escapedName": undefined,
    "fetchSpec": Any<String>,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": undefined,
    "raw": "./packages/my-pkg",
    "rawSpec": "./packages/my-pkg",
    "registry": undefined,
    "saveSpec": Any<String>,
    "scope": undefined,
    "type": "directory",
    "where": Any<String>,
  },
}
`;

exports[`isHostedGitResult should return false for registry packages 1`] = `
{
  "_parsePackageNameCore": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
  "actual": false,
  "getSemverFromNpaResult": "4.17.21",
  "inputSpec": "lodash@4.17.21",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
}
`;

exports[`isHostedGitResult should return true for GitHub URL 1`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": true,
  "getSemverFromNpaResult": "github:bluelovers/ws-yarn-workspaces",
  "inputSpec": "github:bluelovers/ws-yarn-workspaces",
  "result": {
    "escapedName": undefined,
    "fetchSpec": null,
    "gitCommittish": null,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": GitHost {
      "auth": null,
      "blobpath": "blob",
      "browseblobtemplate": [Function],
      "browsetemplate": [Function],
      "browsetreetemplate": [Function],
      "bugstemplate": [Function],
      "committish": null,
      "default": "shortcut",
      "docstemplate": [Function],
      "domain": "github.com",
      "editpath": "edit",
      "edittemplate": [Function],
      "extract": [Function],
      "filetemplate": [Function],
      "gittemplate": [Function],
      "hashformat": [Function],
      "httpstemplate": [Function],
      "opts": {
        "noCommittish": true,
        "noGitPlus": true,
      },
      "pathtemplate": [Function],
      "project": "ws-yarn-workspaces",
      "protocols": [
        "git:",
        "http:",
        "git+ssh:",
        "git+https:",
        "ssh:",
        "https:",
      ],
      "shortcuttemplate": [Function],
      "sshtemplate": [Function],
      "sshurltemplate": [Function],
      "tarballtemplate": [Function],
      "treepath": "tree",
      "type": "github",
      "user": "bluelovers",
    },
    "name": undefined,
    "raw": "github:bluelovers/ws-yarn-workspaces",
    "rawSpec": "github:bluelovers/ws-yarn-workspaces",
    "registry": undefined,
    "saveSpec": "github:bluelovers/ws-yarn-workspaces",
    "scope": undefined,
    "type": "git",
    "where": undefined,
  },
}
`;

exports[`isHostedGitResult should return true for GitHub shorthand 1`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": true,
  "getSemverFromNpaResult": "bluelovers/ws-yarn-workspaces",
  "inputSpec": "bluelovers/ws-yarn-workspaces",
  "result": {
    "escapedName": undefined,
    "fetchSpec": null,
    "gitCommittish": null,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": GitHost {
      "auth": null,
      "blobpath": "blob",
      "browseblobtemplate": [Function],
      "browsetemplate": [Function],
      "browsetreetemplate": [Function],
      "bugstemplate": [Function],
      "committish": null,
      "default": "shortcut",
      "docstemplate": [Function],
      "domain": "github.com",
      "editpath": "edit",
      "edittemplate": [Function],
      "extract": [Function],
      "filetemplate": [Function],
      "gittemplate": [Function],
      "hashformat": [Function],
      "httpstemplate": [Function],
      "opts": {
        "noCommittish": true,
        "noGitPlus": true,
      },
      "pathtemplate": [Function],
      "project": "ws-yarn-workspaces",
      "protocols": [
        "git:",
        "http:",
        "git+ssh:",
        "git+https:",
        "ssh:",
        "https:",
      ],
      "shortcuttemplate": [Function],
      "sshtemplate": [Function],
      "sshurltemplate": [Function],
      "tarballtemplate": [Function],
      "treepath": "tree",
      "type": "github",
      "user": "bluelovers",
    },
    "name": undefined,
    "raw": "bluelovers/ws-yarn-workspaces",
    "rawSpec": "bluelovers/ws-yarn-workspaces",
    "registry": undefined,
    "saveSpec": "github:bluelovers/ws-yarn-workspaces",
    "scope": undefined,
    "type": "git",
    "where": undefined,
  },
}
`;

exports[`isNpmPackageArgResult should return true for alias packages 1`] = `
{
  "_parsePackageNameCore": {
    "name": "my-lodash",
    "result": {
      "escapedName": "my-lodash",
      "fetchSpec": null,
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "my-lodash",
      "raw": "my-lodash@npm:lodash@4.17.21",
      "rawSpec": "npm:lodash@4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "subSpec": {
        "escapedName": "lodash",
        "fetchSpec": "4.17.21",
        "gitCommittish": undefined,
        "gitRange": undefined,
        "gitSubdir": undefined,
        "name": "lodash",
        "raw": "lodash@4.17.21",
        "rawSpec": "4.17.21",
        "registry": true,
        "saveSpec": null,
        "scope": undefined,
        "type": "version",
        "where": undefined,
      },
      "type": "alias",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "my-lodash",
    "type": "alias",
  },
  "actual": true,
  "getSemverFromNpaResult": "4.17.21",
  "inputSpec": "my-lodash@npm:lodash@4.17.21",
  "result": {
    "escapedName": "my-lodash",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "my-lodash",
    "raw": "my-lodash@npm:lodash@4.17.21",
    "rawSpec": "npm:lodash@4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
}
`;

exports[`isNpmPackageArgResult should return true for file packages 1`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": true,
  "getSemverFromNpaResult": "./packages/my-pkg",
  "inputSpec": "./packages/my-pkg",
  "result": {
    "escapedName": undefined,
    "fetchSpec": Any<String>,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": undefined,
    "raw": "./packages/my-pkg",
    "rawSpec": "./packages/my-pkg",
    "registry": undefined,
    "saveSpec": Any<String>,
    "scope": undefined,
    "type": "directory",
    "where": Any<String>,
  },
}
`;

exports[`isNpmPackageArgResult should return true for git packages 1`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": true,
  "getSemverFromNpaResult": "bluelovers/ws-yarn-workspaces",
  "inputSpec": "bluelovers/ws-yarn-workspaces",
  "result": {
    "escapedName": undefined,
    "fetchSpec": null,
    "gitCommittish": null,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": GitHost {
      "auth": null,
      "blobpath": "blob",
      "browseblobtemplate": [Function],
      "browsetemplate": [Function],
      "browsetreetemplate": [Function],
      "bugstemplate": [Function],
      "committish": null,
      "default": "shortcut",
      "docstemplate": [Function],
      "domain": "github.com",
      "editpath": "edit",
      "edittemplate": [Function],
      "extract": [Function],
      "filetemplate": [Function],
      "gittemplate": [Function],
      "hashformat": [Function],
      "httpstemplate": [Function],
      "opts": {
        "noCommittish": true,
        "noGitPlus": true,
      },
      "pathtemplate": [Function],
      "project": "ws-yarn-workspaces",
      "protocols": [
        "git:",
        "http:",
        "git+ssh:",
        "git+https:",
        "ssh:",
        "https:",
      ],
      "shortcuttemplate": [Function],
      "sshtemplate": [Function],
      "sshurltemplate": [Function],
      "tarballtemplate": [Function],
      "treepath": "tree",
      "type": "github",
      "user": "bluelovers",
    },
    "name": undefined,
    "raw": "bluelovers/ws-yarn-workspaces",
    "rawSpec": "bluelovers/ws-yarn-workspaces",
    "registry": undefined,
    "saveSpec": "github:bluelovers/ws-yarn-workspaces",
    "scope": undefined,
    "type": "git",
    "where": undefined,
  },
}
`;

exports[`isNpmPackageArgResult should return true for registry packages 1`] = `
{
  "_parsePackageNameCore": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
  "actual": true,
  "getSemverFromNpaResult": "4.17.21",
  "inputSpec": "lodash@4.17.21",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
}
`;

exports[`isRegistryResult should return false for git packages 1`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": false,
  "getSemverFromNpaResult": "bluelovers/ws-yarn-workspaces",
  "inputSpec": "bluelovers/ws-yarn-workspaces",
  "result": {
    "escapedName": undefined,
    "fetchSpec": null,
    "gitCommittish": null,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": GitHost {
      "auth": null,
      "blobpath": "blob",
      "browseblobtemplate": [Function],
      "browsetemplate": [Function],
      "browsetreetemplate": [Function],
      "bugstemplate": [Function],
      "committish": null,
      "default": "shortcut",
      "docstemplate": [Function],
      "domain": "github.com",
      "editpath": "edit",
      "edittemplate": [Function],
      "extract": [Function],
      "filetemplate": [Function],
      "gittemplate": [Function],
      "hashformat": [Function],
      "httpstemplate": [Function],
      "opts": {
        "noCommittish": true,
        "noGitPlus": true,
      },
      "pathtemplate": [Function],
      "project": "ws-yarn-workspaces",
      "protocols": [
        "git:",
        "http:",
        "git+ssh:",
        "git+https:",
        "ssh:",
        "https:",
      ],
      "shortcuttemplate": [Function],
      "sshtemplate": [Function],
      "sshurltemplate": [Function],
      "tarballtemplate": [Function],
      "treepath": "tree",
      "type": "github",
      "user": "bluelovers",
    },
    "name": undefined,
    "raw": "bluelovers/ws-yarn-workspaces",
    "rawSpec": "bluelovers/ws-yarn-workspaces",
    "registry": undefined,
    "saveSpec": "github:bluelovers/ws-yarn-workspaces",
    "scope": undefined,
    "type": "git",
    "where": undefined,
  },
}
`;

exports[`isRegistryResult should return true for packages without version (defaults to range) 1`] = `
{
  "_parsePackageNameCore": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "*",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash",
      "rawSpec": "*",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "*",
    "subname": "lodash",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "*",
  "inputSpec": "lodash",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "lodash",
    "raw": "lodash",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`isRegistryResult should return true for range packages 1`] = `
{
  "_parsePackageNameCore": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "^4.17.0",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@^4.17.0",
      "rawSpec": "^4.17.0",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "range",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "^4.17.0",
    "subname": "lodash",
    "type": "range",
  },
  "actual": true,
  "getSemverFromNpaResult": "^4.17.0",
  "inputSpec": "lodash@^4.17.0",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "^4.17.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "lodash",
    "raw": "lodash@^4.17.0",
    "rawSpec": "^4.17.0",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`isRegistryResult should return true for tag packages 1`] = `
{
  "_parsePackageNameCore": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "beta",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@beta",
      "rawSpec": "beta",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "tag",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "beta",
    "subname": "lodash",
    "type": "tag",
  },
  "actual": true,
  "getSemverFromNpaResult": "beta",
  "inputSpec": "lodash@beta",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "beta",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "lodash",
    "raw": "lodash@beta",
    "rawSpec": "beta",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "tag",
    "where": undefined,
  },
}
`;

exports[`isRegistryResult should return true for version packages 1`] = `
{
  "_parsePackageNameCore": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
  "actual": true,
  "getSemverFromNpaResult": "4.17.21",
  "inputSpec": "lodash@4.17.21",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
}
`;

exports[`isURLResult should return false for GitHub shorthand (hosted) 1`] = `
{
  "_parsePackageNameCore": undefined,
  "actual": false,
  "getSemverFromNpaResult": "bluelovers/ws-yarn-workspaces",
  "inputSpec": "bluelovers/ws-yarn-workspaces",
  "result": {
    "escapedName": undefined,
    "fetchSpec": null,
    "gitCommittish": null,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": GitHost {
      "auth": null,
      "blobpath": "blob",
      "browseblobtemplate": [Function],
      "browsetemplate": [Function],
      "browsetreetemplate": [Function],
      "bugstemplate": [Function],
      "committish": null,
      "default": "shortcut",
      "docstemplate": [Function],
      "domain": "github.com",
      "editpath": "edit",
      "edittemplate": [Function],
      "extract": [Function],
      "filetemplate": [Function],
      "gittemplate": [Function],
      "hashformat": [Function],
      "httpstemplate": [Function],
      "opts": {
        "noCommittish": true,
        "noGitPlus": true,
      },
      "pathtemplate": [Function],
      "project": "ws-yarn-workspaces",
      "protocols": [
        "git:",
        "http:",
        "git+ssh:",
        "git+https:",
        "ssh:",
        "https:",
      ],
      "shortcuttemplate": [Function],
      "sshtemplate": [Function],
      "sshurltemplate": [Function],
      "tarballtemplate": [Function],
      "treepath": "tree",
      "type": "github",
      "user": "bluelovers",
    },
    "name": undefined,
    "raw": "bluelovers/ws-yarn-workspaces",
    "rawSpec": "bluelovers/ws-yarn-workspaces",
    "registry": undefined,
    "saveSpec": "github:bluelovers/ws-yarn-workspaces",
    "scope": undefined,
    "type": "git",
    "where": undefined,
  },
}
`;

exports[`isURLResult should return false for registry packages 1`] = `
{
  "_parsePackageNameCore": {
    "name": "lodash",
    "result": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "scope": undefined,
    "semver": "4.17.21",
    "subname": "lodash",
    "type": "version",
  },
  "actual": false,
  "getSemverFromNpaResult": "4.17.21",
  "inputSpec": "lodash@4.17.21",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
}
`;
